@@ -1,18 +1,23 @@
 //> using scala 3
-//> using jvm 23
-//> using dep dev.alteration::branch:0.0.14
+//> using jvm 25
+//> using dep dev.alteration::mustachio:0.0.15
+//> using dep dev.alteration::ursula:0.0.15
+//> using dep com.lihaoyi::os-lib::0.11.8
+//> using dep com.lihaoyi::os-lib-watch::0.11.8
+//> using dep com.lihaoyi::cask:0.11.3
+//> using javaOpt --sun-misc-unsafe-memory-access=allow
 
 //> using  options -no-indent -rewrite -source:3.4-migration
 
 //> using resourceDir ./new_site
-//> using test.dep org.scalameta::munit:1.2.1
+//> using test.dep org.scalameta::munit:1.2.2
 
-//> using dep org.commonmark:commonmark:0.27.0
-//> using dep org.commonmark:commonmark-ext-autolink:0.27.0
-//> using dep org.commonmark:commonmark-ext-gfm-strikethrough:0.27.0
-//> using dep org.commonmark:commonmark-ext-gfm-tables:0.27.0
-//> using dep org.commonmark:commonmark-ext-footnotes:0.27.0
-//> using dep org.commonmark:commonmark-ext-heading-anchor:0.27.0
-//> using dep org.commonmark:commonmark-ext-ins:0.27.0
-//> using dep org.commonmark:commonmark-ext-yaml-front-matter:0.27.0
-//> using dep org.commonmark:commonmark-ext-image-attributes:0.27.0
+//> using dep org.commonmark:commonmark:0.27.1
+//> using dep org.commonmark:commonmark-ext-autolink:0.27.1
+//> using dep org.commonmark:commonmark-ext-gfm-strikethrough:0.27.1
+//> using dep org.commonmark:commonmark-ext-gfm-tables:0.27.1
+//> using dep org.commonmark:commonmark-ext-footnotes:0.27.1
+//> using dep org.commonmark:commonmark-ext-heading-anchor:0.27.1
+//> using dep org.commonmark:commonmark-ext-ins:0.27.1
+//> using dep org.commonmark:commonmark-ext-yaml-front-matter:0.27.1
+//> using dep org.commonmark:commonmark-ext-image-attributes:0.27.1
